namespace TransportCompany.Lib;

public interface IObject
{
    
}